// Vitest Snapshot v1

exports[`plugins/swc > should disable swc minify 1`] = `
{
  "module": {
    "rules": [
      {
        "include": [
          {
            "and": [
              "<ROOT>",
              {
                "not": /node_modules/,
              },
            ],
          },
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/src/loader",
            "options": {
              "cwd": "<ROOT>",
              "env": {
                "mode": "entry",
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
              },
              "extensions": {
                "lockCorejsVersion": {
                  "corejs": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
                  "swcHelpers": "<WORKSPACE>/node_modules/<PNPM_INNER>/@swc/helpers",
                },
              },
              "jsc": {
                "transform": {},
              },
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/swc > should set swc minimizer in production 1`] = `
{
  "module": {
    "rules": [
      {
        "include": [
          {
            "and": [
              "<ROOT>",
              {
                "not": /node_modules/,
              },
            ],
          },
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/src/loader",
            "options": {
              "cwd": "<ROOT>",
              "env": {
                "mode": "entry",
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
              },
              "extensions": {
                "lockCorejsVersion": {
                  "corejs": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
                  "swcHelpers": "<WORKSPACE>/node_modules/<PNPM_INNER>/@swc/helpers",
                },
              },
              "jsc": {
                "transform": {},
              },
            },
          },
        ],
      },
    ],
  },
  "optimization": {
    "minimizer": [
      SwcWebpackPlugin {
        "minifyOptions": {
          "compress": {},
          "mangle": true,
        },
      },
    ],
  },
}
`;

exports[`plugins/swc > should set swc-loader 1`] = `
{
  "module": {
    "rules": [
      {
        "include": [
          {
            "and": [
              "<ROOT>",
              {
                "not": /node_modules/,
              },
            ],
          },
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/src/loader",
            "options": {
              "cwd": "<ROOT>",
              "env": {
                "mode": "entry",
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
              },
              "extensions": {
                "lockCorejsVersion": {
                  "corejs": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
                  "swcHelpers": "<WORKSPACE>/node_modules/<PNPM_INNER>/@swc/helpers",
                },
              },
              "jsc": {
                "transform": {},
              },
            },
          },
        ],
      },
    ],
  },
}
`;
